kubernetes/bitwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
  # Using hostpath volumes requires privileged pod security
  # This is required for the bitwarden container to access the host filesystem for storing data in /var/mnt/bitwarden
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
