kubernetes/bitwarden/bitwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app.kubernetes.io/name: bitwarden
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden
    spec:
      nodeSelector:
        kubernetes.io/hostname: yumi
      containers:
        - name: bitwarden
          image: vaultwarden/server:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: bitwarden-data
              mountPath: /data
      volumes:
        - name: bitwarden-data
          hostPath:
            path: /var/mnt/bitwarden
            type: Directory
